<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSurface">

    <include
        android:id="@+id/toolbarForgetPwdConfirm"
        layout="@layout/toolbar_arrow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_helper_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/desc_pwd_forget"
        android:textAppearance="@style/TextAppearance.ChatApp.BodyLarge"
        android:textColor="@color/colorOnBackground"
        app:layout_constraintEnd_toEndOf="@+id/btnChange"
        app:layout_constraintStart_toStartOf="@+id/btnChange"
        app:layout_constraintTop_toBottomOf="@+id/toolbarForgetPwdConfirm" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_pwd_new"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:helperText="@string/helper_pwd"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="@+id/tv_helper_title"
        app:layout_constraintStart_toStartOf="@+id/tv_helper_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_helper_title"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_pwd_new"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/hint_pwd_new"
            android:inputType="textPassword"
            android:textAppearance="@style/TextAppearance.ChatApp.BodyMedium" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_pwd_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:helperText="@string/helper_pwd_confirm"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="@+id/btnChange"
        app:layout_constraintStart_toStartOf="@+id/btnChange"
        app:layout_constraintTop_toBottomOf="@+id/til_pwd_new"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_pwd_confirm"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/hint_pwd_confirm"
            android:inputType="textPassword"
            android:textAppearance="@style/TextAppearance.ChatApp.BodyMedium" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnChange"
        style="@style/Widget.ChatApp.Filled.Button"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/btn_change"
        android:textAllCaps="false"
        android:textColor="@color/colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>