<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/_150sdp"
    android:background="@drawable/bg_conor_white">

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/unblock_user"
        android:textAppearance="@style/TextAppearance.ChatApp.TitleMedium"
        android:textColor="@color/colorOnBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:text="@string/unblock_description"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.ChatApp.BodySmall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView24" />

    <Button
        android:id="@+id/btn_cancel"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_48sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:background="?attr/selectableItemBackground"
        android:text="@string/btn_cancel"
        android:textAppearance="@style/TextAppearance.ChatApp.LabelLarge"
        android:textColor="@color/colorOnBackground"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btn_unblock"
        app:layout_constraintEnd_toStartOf="@+id/btn_unblock"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_unblock" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_unblock"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:background="@drawable/bg_conor_green"
        android:text="@string/Unblock"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_cancel"
        app:layout_constraintTop_toBottomOf="@+id/textView26" />
</androidx.constraintlayout.widget.ConstraintLayout>